<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/menu_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

	    <Button
	    android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="30"
        android:onClick="StartButton_Click"
	    android:text="@string/start" />
	
	    <Button
	        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="30"
        android:onClick="SettingsButton_Click"
	        android:text="@string/settings" />
	    <Button
	        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="30"
        android:onClick="QuitButton_Click"
	        android:text="@string/quit" />
</LinearLayout>
